tried to fix the terrible filter button... ran into issues with the iframes overlapping the filter dropdown menu... it temporarily moves the iframe div down so we can see the filter options... the ng-click functions are not working properly and population of the  data isn't up to par... need to work on this more. I haven't gotten to help on the login page yet, ill see if I can help with population of those screens tomorrow night

--- a/app/archive.css
+++ b/app/archive.css
@@ -50,10 +50,13 @@ iframe {
 }
 
 .archive-filter {
-  margin: 5px 1%;
-  padding: 5px;
-  background: black;
-  color: white;
+  margin-left: 1%;
+  background: #404040;
+  background-image: -webkit-linear-gradient(top, #404040, black);
+  background-image: -moz-linear-gradient(top, #404040, black);
+  background-image: -ms-linear-gradient(top, #404040, black);
+  background-image: -o-linear-gradient(top, #404040, black);
+  background-image: linear-gradient(to bottom, #404040, black);
   max-width: 200px;
   position: relative;
 }
@@ -62,29 +65,61 @@ iframe {
   cursor: pointer;
 }
 
-.archive-filter-title,
+.archive-filter-title{
+color: silver;
+  font-size: 100%;
+  text-align: center;
+  text-shadow: 0 1px 0 black, 0 2px 0 black, 0 3px 0 black, 0 4px 0 #000, 0 5px 0 #000, 0 6px 1px black, 0 0 5px black, 0 1px 3px black, 0 3px 5px black;
+  background: #404040;
+  background-image: -webkit-linear-gradient(top, #404040, black);
+  background-image: -moz-linear-gradient(top, #404040, black);
+  background-image: -ms-linear-gradient(top, #404040, black);
+  background-image: -o-linear-gradient(top, #404040, black);
+  background-image: linear-gradient(to bottom, #404040, black);
+  padding: 3px;
+  margin: 2px;
+}
 .archive-filter-dropdown-item {
-  padding: 5px;
-  margin: 5px;
+  color: silver;
+  font-size: 85%;
+  text-align: center;
+  text-shadow: 0 1px 0 black, 0 2px 0 black, 0 3px 0 black, 0 4px 0 #000, 0 5px 0 #000, 0 6px 1px black, 0 0 5px black, 0 1px 3px black, 0 3px 5px black;
+  background: #404040;
+  background-image: -webkit-linear-gradient(top, #404040, black);
+  background-image: -moz-linear-gradient(top, #404040, black);
+  background-image: -ms-linear-gradient(top, #404040, black);
+  background-image: -o-linear-gradient(top, #404040, black);
+  background-image: linear-gradient(to bottom, #404040, black);
+  padding: 4px;
+  margin: 4px;
+  position: relative;
+  z-index: 10;
 }
 
 .archive-filter-dropdown {
-  padding-top: 5px;
-  border-top: 1px solid white;
-  position: absolute;
-  background: black;
+  border-top: 1px solid darkred;
+  border-bottom: 1px solid black;
+  background: #404040;
+  background-image: -webkit-linear-gradient(top, #404040, black);
+  background-image: -moz-linear-gradient(top, #404040, black);
+  background-image: -ms-linear-gradient(top, #404040, black);
+  background-image: -o-linear-gradient(top, #404040, black);
+  background-image: linear-gradient(to bottom, #404040, black);
   width: 200px;
+  position: relative;
+  z-index: 10;
 }
 .archiveAlignTable{
   width:95%;
-    border-top:30px solid darkred;
+    border-top:70px solid darkred;
     position:relative;
     left:5%;
     background-color:darkred;
 }
 .archive-filter-dropdown-item:hover {
-  background: white;
-  color: black;
+  background: darkred;
+  position: relative;
+  z-index: 10;
 }
 
 .archive-content {
